# fra

./: .gitignore  AGENTS.md  README.md  fra.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-mvp-scope.md  02-architecture.md  03-project-structure.md  04-components.md  05-runtime-flows.md  06-markdown-storage.md  07-extensibility.md  08-data-source-strategy.md  09-cli-dashboard-and-output-contract.md  10-implementation-plan.md  11-operations-and-recovery.md  12-release-traceability.md  README.md
src/fra/: __init__.py  __main__.py  bootstrap.py  errors.py  version.py
src/fra/adapters/: __init__.py
src/fra/application/: agent_schemas.py  allocation_research.py  container.py  crisis_research.py  crypto_market_timing.py  dashboard_service.py  doctor_service.py  forecast_service.py  prompt_templates.py  regional_packs.py  research_orchestrator.py  research_run_service.py  research_workflows.py  results.py  source_cache.py  source_platform.py  source_service.py  verification_service.py  workspace_service.py
src/fra/cli/: app.py  exit_codes.py
src/fra/config/: __init__.py  loader.py  models.py
src/fra/domain/: __init__.py  analytics.py  crisis.py  documents.py  economic.py  errors.py  forecasts.py  ids.py  instruments.py  market_data.py  portfolio.py  regions.py  regulatory.py  research.py  shared.py  signals.py  sources.py  time.py
tests/contract/: test_architecture.py  test_forecast_repositories.py  test_markdown_repositories.py  test_port_contracts.py  test_portfolio_repositories.py
tests/integration/: test_wp1_bootstrap.py  test_wp2_markdown_vertical_slice.py  test_wp5_crypto_vertical_slice.py  test_wp5_live_crypto_smoke.py  test_wp7_crisis_historical_slice.py  test_wp8_allocation_vertical_slice.py
tests/unit/: test_agent_schemas_and_orchestrator.py  test_application_results.py  test_cli_version.py  test_config_loader.py  test_dashboard_service.py  test_doctor_service.py  test_exit_codes.py  test_fake_adapters.py  test_forecast_refresh.py  test_in_memory_repositories.py  test_markdown_codec_and_atomic_files.py  test_redaction.py  test_research_contracts.py  test_research_run_service.py  test_source_platform.py  test_source_plugins.py  test_source_router_execution.py  test_source_service.py  test_source_storage.py  test_workspace.py  test_wp4_cli_outcomes.py
(+126 files in other folders)
